Added Base.html and others templates were inherited.Adde Navbar and Card from Bootstrap

--- a/templates/recreation.html
+++ b/templates/recreation.html
@@ -1,7 +1,6 @@
-
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock %}
+{% block title %}Recreation{% endblock %}
 
 {% block content %}
 <div class="container my-3">
