--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,88 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1> This is homepage {{ name }}</h1>
-    <p>this is course {{ course }}</p>
+<div class="container mt-0 px=0">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner" style="width: 80rem;height:20rem">
+            <div class="carousel-item active">
+                <img src="https://as2.ftcdn.net/v2/jpg/11/86/28/81/1000_F_1186288166_A2vIK6h5QS9dmnjNKQCXXGgEEjXyPbhQ.jpg"
+                     class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://as1.ftcdn.net/v2/jpg/04/40/10/84/1000_F_440108489_kqzh9GAt6sh4Mxz1N9vMcmUIotW11JRb.jpg"
+                     class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://as1.ftcdn.net/v2/jpg/08/74/41/82/1000_F_874418286_M2gN1E3fEvqRMFDdXRXB4omd91Z25wxi.jpg"
+                     class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+<div class="container my-3">
+    <h2 class="text-center my-3 py-3">Me at a glance</h2>
+    <div class="row mx-auto justify-content-center">
+        <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/seed/Forest/500/300" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Forest</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
+                        card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/seed/sea/500/300" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sea</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
+                        card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/seed/desert/500/300" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Desert</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the
+                        card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 
 {% endblock %}
